a_udemy/course2/9-networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: 
  name: example-gateway
spec:
  gatewayClassName: example-class
  listeners:
  - name: http
    protocol: http
    port: 80
