a_udemy/course2/9-networking/frontend-route.yaml
# kubectl get pod, svc -n default
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: default
spec:
  parentRefs:
    - name: nginx-gateway           # Name of the Gateway
      namespace: nginx-gateway      # Namespace where the Gateway is deployed
      sectionName: http             # Attach to the 'http' listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-svc
          port: 80

# kubectl apply -f frontend-route.yaml
# kubectl get httproute frontend-route
# kubectl describe httproute frontend-route
