a_udemy/course2/9-networking/ingress-wear-watch.yaml
apiVersion: v1
kind: Ingress
metadata: 
  name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - path: /wear
        backend: 
          service:
            name: wear-service
            port: 80
      - path: /watch
        backend: 
          service:
            name: watch-service
            port: 80
